--- a/Lab02/app/src/main/AndroidManifest.xml
+++ b/Lab02/app/src/main/AndroidManifest.xml
@@ -10,11 +10,9 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Task_1"
+        android:theme="@style/Theme.Task1"
         tools:targetApi="31">
-        <activity
-            android:name=".Custom_List_View"
-            android:exported="false" />
+
         <activity
             android:name=".MainActivity"
             android:exported="true">
